[tool.poetry]
name = "flipt-django"
version = "0.1.0"
description = "Flipt Integration for Django and Django REST Framework"
authors = ["Preeti Yuankrathok <preetisatit@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.0"
flipt-grpc-python = {url = "https://pip.c0d1um.io/packages/flipt-grpc-python-0.1.0.tar.gz"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
