[tool.poetry]
name = "django-flipt"
version = "0.1.0"
description = "Flipt Integration for Django and Django REST Framework"
authors = ["Preeti Yuankrathok <preetisatit@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.0"
flipt-grpc-python = {url = "https://pip.c0d1um.io/packages/flipt-grpc-python-0.1.0.tar.gz"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
icecream = "^2.1.0"
ipdb = "^0.13.4"
pylint = "^2.6.0"
djangorestframework = "^3.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
