[tool.poetry]
name = "django-flipt"
version = "0.1.1"
description = "Flipt Integration for Django and Django REST Framework"
authors = ["Preeti Yuankrathok <preetisatit@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/earthpyy/django-flipt"
keywords = ["flipt", "django", "django-rest-framework", "feature-flag", "feature-toggle"]
packages = [
    { include = "flipt" }
]

[tool.poetry.dependencies]
python = "^3.6"
django = "^3.0.0"
flipt-grpc-python3 = "^0.1.0"
djangorestframework = { version = "^3.12.2", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^5.2"
icecream = "^2.1.0"
ipdb = "^0.13.4"
pylint = "^2.6.0"

[tool.poetry.extras]
rest = ["djangorestframework"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
